# android-emu-agent

./: .gitignore  .markdownlint-cli2.jsonc  .markdownlint.jsonc  .prettierignore  AGENTS.md  CLAUDE.md  GEMINI.md  LICENSE  README.md  mkdocs.yml  package-lock.json  package.json  pyproject.toml
.githooks/: pre-commit
.github/workflows/: ci.yml  pages.yml
docs/: aea-spec.md  api.md  index.md  reference.md  tasks.md  workflow-examples.md
docs/stylesheets/: home.css
examples/tasks/: README.md  checkout-smoke.aea  idle-snapshot.aea  login-flow.aea
jdi-bridge/: build.gradle.kts  settings.gradle.kts
scripts/: dev.sh  validate_skills.py
skills/android-emu-agent/: SKILL.md
skills/android-emu-agent/agents/: openai.yaml
skills/android-emu-agent/references/: behavioral-protocols.md  command-reference.md  core-loop.md  debugging.md  examples.md  files.md  patterns.md  recovery.md  reliability.md  troubleshooting.md  ui-automation-patterns.md  workflow-examples.md
skills/android-emu-agent/templates/: flow-e2e.md  flow-login.md  flow-onboarding.md  flow-permission.md  flow-recovery.md  flow-reliability-triage.md
src/android_emu_agent/: __init__.py  errors.py  validation.py
src/android_emu_agent/actions/: __init__.py  executor.py  selector.py  wait.py
src/android_emu_agent/artifacts/: __init__.py  manager.py
src/android_emu_agent/cli/: __init__.py  daemon_client.py  main.py  utils.py
src/android_emu_agent/daemon/: __init__.py  core.py  diagnostics.py  health.py  models.py  server.py
src/android_emu_agent/db/: __init__.py  models.py
src/android_emu_agent/debugger/: __init__.py  bridge_client.py  bridge_downloader.py  manager.py  models.py
src/android_emu_agent/device/: __init__.py  manager.py  session.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py
tests/unit/: __init__.py  test_action_endpoints.py  test_app_commands.py  test_app_endpoints.py  test_artifact_commands.py  test_artifact_endpoints.py  test_artifact_manager.py  test_bridge_client.py  test_bridge_downloader.py  test_debug_commands.py  test_debug_manager.py  test_debug_observe_endpoints.py  test_device_capabilities.py  test_device_manager.py  test_emulator_commands.py  test_errors.py  test_executor_utils.py  test_expectation_commands.py  test_expectation_endpoints.py  test_expectation_manager.py  test_file_commands.py  test_file_endpoints.py  test_file_manager.py  test_health_monitor.py  test_ref_resolver.py  test_reliability_commands.py  test_reliability_manager.py  test_reliability_profile_endpoints.py  test_request_diagnostics.py  test_selector.py  test_snapshot_mode.py  test_snapshotter.py  test_system_commands.py  test_system_endpoints.py  test_system_manager.py  test_tap_action.py  test_task_commands.py  test_task_endpoints.py  test_task_examples.py  test_task_manager.py  (+8 more)
(+65 files in other folders)
