[project]
name = "android-emu-agent"
version = "0.1.3"
description = "CLI + daemon for LLM-driven Android UI control on emulators and rooted devices"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Oleg Kot", email = "kot.oleg@gmail.com" }]
keywords = ["android", "automation", "llm", "ui-testing"]
readme = { file = "README.md", content-type = "text/markdown" }

dependencies = [
    "fastapi>=0.128.1",
    "httpx>=0.27.0",
    "uvicorn[standard]>=0.27.0",
    "uiautomator2>=3.0.0",
    "adbutils>=2.0.0",
    "lxml>=5.0.0",
    "aiosqlite>=0.19.0",
    "typer>=0.9.0",
    "structlog>=24.0.0",
    "pydantic>=2.5.0",
]

[project.urls]
Homepage = "https://github.com/alehkot/android-emu-agent"

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.2.0",
    "mypy>=1.8.0",
    "pyright>=1.1.0",
    "lxml-stubs>=0.5.0",
    "mkdocs>=1.6.0",
]

[project.scripts]
android-emu-agent = "android_emu_agent.cli.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/android_emu_agent"]
[tool.hatch.build.targets.wheel.force-include]
"src/android_emu_agent/py.typed" = "android_emu_agent/py.typed"
"src/android_emu_agent/artifacts/py.typed" = "android_emu_agent/artifacts/py.typed"

[tool.hatch.build.targets.sdist]
include = ["README.md", "src"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "W",   # pycodestyle warnings
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "ARG", # flake8-unused-arguments
    "PTH", # flake8-use-pathlib
    "RUF", # ruff-specific
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["android_emu_agent"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = [
    "uiautomator2.*",
    "adbutils.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "integration: requires Android emulator (deselect with '-m \"not integration\"')",
    "slow: marks tests as slow",
]
addopts = "-ra -q"

[tool.coverage.run]
source = ["src/android_emu_agent"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
